--- a/index.html
+++ b/index.html
@@ -110,5 +110,14 @@ function run() {
 window.onload = run;
 </script>
 
+<hr>
+<p>
+  <a href="profit-calc.html" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">
+    損益計算機はこちらへ
+  </a>
+</p>
+
+    
 </body>
 </html>
+
