--- a/index.html
+++ b/index.html
@@ -111,13 +111,27 @@ window.onload = run;
 </script>
 
 <hr>
-<p>
-  <a href="profit-calc.html" style="display: inline-block; padding: 10px 20px; background-color: #007bff; color: white; text-decoration: none; border-radius: 5px;">
-    損益計算機はこちらへ
-  </a>
-</p>
+<div style="text-align: center; margin-top: 30px;">
+    <p style="font-size: 14px; color: #666; margin-bottom: 10px;">別の計算機はこちら</p>
+    <a href="profit-calc.html" style="
+        display: inline-block; 
+        padding: 12px 30px; 
+        background-color: #ffb74d; 
+        color: white; 
+        text-decoration: none; 
+        border-radius: 25px; 
+        font-weight: bold; 
+        font-size: 16px;
+        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        transition: background 0.3s;
+    ">
+        損益額計算機はこちらへ
+    </a>
+</div>
+<br>
 
     
 </body>
 </html>
+
 
