--- a/index.html
+++ b/index.html
@@ -111,27 +111,27 @@ window.onload = run;
 </script>
 
 <hr>
-<div style="text-align: center; margin-top: 30px;">
-    <p style="font-size: 14px; color: #666; margin-bottom: 10px;">別の計算機はこちら</p>
+<div style="text-align: center; margin-top: 30px; margin-bottom: 30px;">
     <a href="profit-calc.html" style="
         display: inline-block; 
-        padding: 12px 30px; 
+        padding: 15px 40px; 
         background-color: #ffb74d; 
         color: white; 
+        text-align: center;
         text-decoration: none; 
-        border-radius: 25px; 
+        border-radius: 30px; 
         font-weight: bold; 
-        font-size: 16px;
-        box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-        transition: background 0.3s;
+        font-size: 18px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        transition: transform 0.2s;
     ">
         損益額計算機はこちらへ
     </a>
 </div>
-<br>
 
     
 </body>
 </html>
+
 
 
