--- a/profit-calc.html
+++ b/profit-calc.html
@@ -123,5 +123,27 @@ function run() {
 window.onload = run;
 </script>
 
+<hr>
+<div style="text-align: center; margin-top: 30px; margin-bottom: 30px;">
+    <a href="index.html" style="
+        display: inline-block; 
+        padding: 15px 40px; 
+        background-color: #38b2ac; 
+        color: white; 
+        text-align: center;
+        text-decoration: none; 
+        border-radius: 30px; 
+        font-weight: bold; 
+        font-size: 18px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+        transition: background 0.3s;
+    ">
+        損益pips計算機はこちらへ
+    </a>
+</div>
+
+
+    
 </body>
 </html>
+
